# mcp-developer-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  docker.yml.bak  locustfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ai/: __init__.py  embedding_manager.py  feature_extractor.py  file_watcher.py  hybrid_search.py  intent_classifier.py  llm_client.py  model_registry.py  model_trainer.py  output_validator.py  review_router.py  risk_feature_extractor.py  risk_prediction_model.py  risk_scorer.py  shap_explainer.py  synthetic_data_generator.py
config/: claude_desktop_config.json  prometheus.yml  tool_intents.yaml
database/: __init__.py  audit_log.py  consent_registry.py  log_retention.py  ml_cache.py  sanitizer.py  schema.py
docs/: API.md  DEVELOPER_SETUP.md  USAGE_GUIDE.md
models/: .gitkeep  __init__.py  events.py  ml_results.py  requests.py  responses.py
observability/: __init__.py  health_check.py  logging_config.py  metrics.py  tracing.py
observability/alerts/: alert_rules.yaml
observability/dashboards/: llm_cost_dashboard.json  ml_anomaly_dashboard.json  request_latency_dashboard.json
policies/: ai_schemas.baml  baml_policy.py  file_access.baml
proxy/: __init__.py  anomaly_detector.py  auth_gateway.py  config.py  consent_db.py  consent_middleware.py  intent_checker.py  mcp_client.py  oauth_validator.py  path_sanitizer.py  rate_limiter.py  refresh_token_store.py
scripts/: generate_test_tokens.py  setup_db.py  train_models.py  validate_project.py
server/: __init__.py  config.py  mcp_server.py  policy_engine.py
server/tools/: __init__.py  ai_tools.py  (+4 more)
tests/: __init__.py  conftest.py  test_ai_tools_phase4.py  test_anomaly_detector.py  test_audit_sanitizer.py  test_auth_gateway.py  test_code_review_phase5.py  test_consent_middleware.py  test_ensemble_anomaly.py  test_file_tools.py  test_git_tools.py  test_hybrid_search.py  test_integration_auth.py  test_intent_checker.py  test_model_training.py  test_oauth_enhanced.py  test_output_validator.py  test_rate_limiter_sliding.py
